feat: update landing page UI

--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
         <div class="toolbar">
             <button id="globalBackBtn" class="back-btn hidden">← Back to Catalog</button>
             <div class="search-box">
-                <input type="text" id="searchInput" placeholder="Search books by title, author...">
+                <input type="text" id="searchInput" placeholder="Search books by title, author, tags...">
             </div>
             <select id="genreSelect">
                 <option value="">Select Genre...</option>
