feat: show genre

--- a/public/index.html
+++ b/public/index.html
@@ -77,6 +77,7 @@
                         <div class="detail-header">
                             <h1 id="detTitle">Shadows of Aethelred</h1>
                             <p class="author">by <span id="detAuthor">Elara Vane</span></p>
+                            <p class="genre-label">Genre: <span id="detGenre" style="color: var(--accent); font-weight: 600;">-</span></p>
                             <div class="rating-stars">⭐⭐⭐⭐⭐ <span id="detRating">(4.8)</span></div>
                         </div>
 
