--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="id">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,6 +8,7 @@
     <link rel="stylesheet" href="/css/styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600&family=Inter:wght@300;400;500;600&display=swap" rel="stylesheet">
 </head>
+
 <body>
     <header class="top-nav">
         <div class="logo">
@@ -125,4 +127,15 @@
 
     <script src="/js/app.js"></script>
 </body>
+
+<footer class="main-footer">
+    <p>&copy; 2025 The Reading Soundtrack</p>
+    <p>
+        Developed for <strong>UAS II3160 – Teknologi Sistem Terintegrasi</strong><br>
+        by <span class="author-name">Nurul Na'im Natifah (18223106)</span>
+    </p>
+</footer>
+
+<div id="loader" class="loader-overlay hidden"></div>
+
 </html>
